--- a/willitmod-dev-bsv/umbrel-app.yml
+++ b/willitmod-dev-bsv/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: willitmod-dev-bsv
 category: bitcoin
 name: AxeBSV
-version: "0.1.2-dev"
+version: "0.1.3-dev"
 tagline: BSV node + solo pool
 description: >-
   Run a Bitcoin SV full node and a solo Stratum v1 pool (ckpool) as a single app.
@@ -17,6 +17,7 @@ description: >-
   Notes:
     - Payout address must be a legacy Base58 address (`1...` / `3...`). CashAddr is not supported.
     - This is an amd64-first DEV build; arm64 support will be added once a reliable arm64 BSV node image is available.
+    - ALPHA: expect breaking changes while this is being tested on 5tratumOS.
 developer: WillItMod
 website: https://github.com/WillItMod/AxeBSV_Release
 repo: https://github.com/WillItMod/AxeBSV_Release
